Bug 513345 - Dolphin locks up when trying to create a new folder in the current one after using "go up"
Summary: Dolphin locks up when trying to create a new folder in the current one after ...
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 25.12.0
Platform: Manjaro Linux
: HI crash
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
: 513745 514001 514009 514161 514302 514921 (view as bug list)
Depends on:
Blocks:
 
Reported: 2025-12-14 07:45 UTC by amilias
Modified: 2026-01-22 09:21 UTC (History)
22 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 25.12.1
Sentry Crash Report:


Attachments
journalctl output of core dump (40.90 KB, text/x-log)
2025-12-14 07:45 UTC, amilias
Details
Backtrace using coredumpctl debug (28.10 KB, text/plain)
2025-12-16 16:58 UTC, amilias
Details

Note You need to log in before you can comment on or make changes to this bug.
Description amilias 2025-12-14 07:45:38 UTC
Created attachment 187622 [details]
journalctl output of core dump

SUMMARY
After the most recent update to 25.12.0, dolphin locks up while putting full load on one cpu core when trying to create a folder in the current one, after using "go up" from a subfolder. The process has to be killed and dumps core afterwards.

STEPS TO REPRODUCE
1. Go into a folder
2. Use "Go up", either through menu or keyboard shortcut)
3. Unselect the selected folder using ESC or by clicking into empty space
4. Create any new folder, either through menu or keyboard shortcut

OBSERVED RESULT
Dolphin locks up while putting full load on one cpu core and has to be killed.
The folder does get created, though.

EXPECTED RESULT
Not locking up.

SOFTWARE/OS VERSIONS
Operating System: Manjaro Linux 
KDE Plasma Version: 6.5.4
KDE Frameworks Version: 6.20.0
Qt Version: 6.10.1
Kernel Version: 6.17.12-1-MANJARO (64-bit)
Graphics Platform: Wayland
Processors: 16 × AMD Ryzen 7 5700G with Radeon Graphics
Memory: 32 GiB of RAM (31.2 GiB usable)
Graphics Processor: AMD Radeon RX 7600

ADDITIONAL INFORMATION
Seems to be related to the bug of making create new folder context sensitive.
Comment 1 amilias 2025-12-15 06:42:27 UTC
After using this version for a day, it turns out it also often crashes after using "go back" (with the same intent to get to the parent folder) and trying to create another folder, but this seems more random, as I can't create a reproducible case in a test folder.
Comment 2 amilias 2025-12-16 16:58:26 UTC
Created attachment 187704 [details]
Backtrace using coredumpctl debug
Comment 3 JanKusanagi 2025-12-17 15:39:06 UTC
I've been seeing this too, since Dolphin 25.11.90.
Related bug: https://bugs.kde.org/show_bug.cgi?id=513482

I don't know the exact steps I took, but it involved  creating a folder, the folder was created wrongly in a subfolder, went into it to delete or move the misplaced folder, came *back up* to paste it or just create a new one at the right place.
So yes, my hanging also involved going up a level.
Comment 4 Ben Guy-Williams 2025-12-19 15:41:15 UTC
(In reply to JanKusanagi from comment #3)
> folder was created wrongly in a subfolder, went into it to delete or move
Recent changes - Create Folder respects selections. If you want a folder in the PWD (main view) then you must de-select first.
Unfortunately, this recent update broke it again.
Comment 5 suse.junky 2025-12-19 16:18:41 UTC
(In reply to amilias from comment #0)
> 
> SUMMARY
> After the most recent update to 25.12.0, dolphin locks up while putting full
> load on one cpu core when trying to create a folder in the current one,
> after using "go up" from a subfolder. The process has to be killed and dumps
> core afterwards.
> 
> STEPS TO REPRODUCE
> 1. Go into a folder
> 2. Use "Go up", either through menu or keyboard shortcut)
> 3. Unselect the selected folder using ESC or by clicking into empty space
> 4. Create any new folder, either through menu or keyboard shortcut
> 
> OBSERVED RESULT
> Dolphin locks up while putting full load on one cpu core and has to be
> killed.
> The folder does get created, though.
> 
> EXPECTED RESULT
> Not locking up.
> 

I see exactly the same problem. My system:

Operating System: openSUSE Tumbleweed 20251217
KDE Plasma Version: 6.5.4
KDE Frameworks Version: 6.21.0
Qt Version: 6.10.1
Kernel Version: 6.18.1-1-default (64-bit)
Graphics Platform: X11
Graphics Processor: Intel® Iris® Xe Graphics
Dolphin Version 25.12.0
Comment 6 Méven 2025-12-22 09:55:00 UTC
Does this only occur on a spinning Disk drive ?

I have tried a bunch reproducing it on my system but couldn't, but I was on a SSD.

I suspect the bug appears when the drive is slow, or the user change directly very fast after creating a directory (faster than the drive created it).
Comment 7 amilias 2025-12-22 10:20:35 UTC
(In reply to Méven from comment #6)

No, I can reproduce this on an SSD and even in /tmp mounted on a ramdisk, see this screen recording:

https://drive.google.com/file/d/1ZDLKzHHa8Fl9R5YYauDEMCq09KtUwcGy
Comment 8 suse.junky 2025-12-22 12:27:27 UTC
(In reply to Méven from comment #6)
> Does this only occur on a spinning Disk drive ?
> 
No (and the problem was not there with earlier versions of dolphin).

I discovered the problem while working on a cifs network drive (1GB LAN).

To out rule any network problem I tested the behavior on a NVMe drive (PCIe Gen4x4, ext4, LUKS2 encrypted) and saw the same problem.

It might be worth to know that the creation of the directory actually succeeds; i.e. when I kill dolphin and then restart it I can see and use the directory.
Comment 9 volatile 2025-12-23 07:24:23 UTC
I also encounter the same issue on a NVMe drive (btrfs).

Reproceduce steps:
1. open a new Dolphin instance and Go into user home directory
2. Create New -> Folder... -> name folder1. folder1 created, no hanging
3. enter this folder by double click then "Go up (Alt+Up)"
5. Create New -> Folder... -> name folder2
6. folder2 created (check with ls) but Dolphing hangs.

If you don't do "Go up (Alt+Up)", no hanging.

Operating System: Fedora Linux 43
KDE Plasma Version: 6.5.4
KDE Frameworks Version: 6.21.0
Dolphin version 25.12
Graphics Platform: Wayland
Comment 10 amilias 2025-12-23 07:30:32 UTC
A few more observations from my tests: 

- speed / time between actions does not seem to be relevant at all (I already did go pretty slow in the recording), the hang will still occur even if 30 minutes passed after step 2
- the "hang state" occurs per tab, so if I do "Go up", change to a different tab to do some work and return, the hang will still happen
- the "Go up" command still seems to be the main culprit to get to the "ready to hang" state, only major path changes, like entering a NEW / different folder (not the same as in step 1!) reset it, meaning the following steps will also trigger the hang up: 

1. Enter folder A
2. "Go up"
3. Enter folder A again
4. "Go back"
5. Create folder

- explicitly creating a sub folder inside A (through selection or context menu) will not trigger the bug, it only happens when creating in the current folder
Comment 11 amilias 2025-12-23 07:41:52 UTC
One last more interesting observation: the hang state will not reset when restarting dolphin. Meaning, closing dolphin after using "Go up", starting the application again and immediately trying to create a new folder in the current view will also trigger the bug.
Comment 12 Bug Janitor Service 2025-12-23 12:32:22 UTC
A possibly relevant merge request was started @ https://invent.kde.org/system/dolphin/-/merge_requests/1129
Comment 13 Thomas Moerschell 2025-12-23 20:49:44 UTC
*** Bug 513745 has been marked as a duplicate of this bug. ***
Comment 14 Méven 2025-12-24 09:52:36 UTC
Git commit 5c0d7da4aa3b2323b418bcf668981a16b61a9244 by Méven Car.
Committed on 24/12/2025 at 09:41.
Pushed by meven into branch 'master'.

DolphinView: observeCreatedDirectory take into account last / of m_url

M  +7    -1    src/views/dolphinview.cpp

https://invent.kde.org/system/dolphin/-/commit/5c0d7da4aa3b2323b418bcf668981a16b61a9244
Comment 15 Méven 2025-12-24 10:07:32 UTC
Git commit 4e74f32acb966e3c8b9879213385e8dcd298c41d by Méven Car.
Committed on 24/12/2025 at 09:56.
Pushed by meven into branch 'release/25.12'.

DolphinView: observeCreatedDirectory take into account last / of m_url


(cherry picked from commit 5c0d7da4aa3b2323b418bcf668981a16b61a9244)

Co-authored-by: Méven Car <meven@kde.org>

M  +7    -1    src/views/dolphinview.cpp

https://invent.kde.org/system/dolphin/-/commit/4e74f32acb966e3c8b9879213385e8dcd298c41d
Comment 16 pdchris 2025-12-28 20:36:20 UTC
Dear all, thank you for providing a solution, can anybody tell which version of Dolphin will first incorporate this and when this version will become available? Thank you
Comment 17 TraceyC 2026-01-05 22:55:12 UTC
           PID: 30486 (dolphin)
           UID: 1000 (stefan)
           GID: 1000 (stefan)
        Signal: 6 (ABRT)
     Timestamp: Tue 2025-12-16 17:54:06 CET (19s ago)
  Command Line: /usr/bin/dolphin
    Executable: /usr/bin/dolphin
 Control Group: /user.slice/user-1000.slice/user@1000.service/app.slice/app-org.kde.dolphin@f6dfa5e7a18a47f8bc5d252bf7c200b8.service
          Unit: user@1000.service
     User Unit: app-org.kde.dolphin@f6dfa5e7a18a47f8bc5d252bf7c200b8.service
         Slice: user-1000.slice
     Owner UID: 1000 (stefan)
       Boot ID: 94dded5c05574d1c967f4fd5efcf2ff2
    Machine ID: e516beb3b4944a3e8bcf76d7aba23030
      Hostname: naglfar
       Storage: /var/lib/systemd/coredump/core.dolphin.1000.94dded5c05574d1c967f4fd5efcf2ff2.30486.1765904046000000.zst (present)
  Size on Disk: 22.3M
       Message: Process 30486 (dolphin) of user 1000 dumped core.
                
                Stack trace of thread 30486:
                #0  0x00007fa7762a7930 malloc (libc.so.6 + 0xa7930)
                #1  0x00007fa776c79c58 n/a (libQt6Core.so.6 + 0x279c58)
                #2  0x00007fa776c7a37e n/a (libQt6Core.so.6 + 0x27a37e)
                #3  0x00007fa776c595c9 _ZN7QString6appendEPK5QCharx (libQt6Core.so.6 + 0x2595c9)
                #4  0x00007fa776b47a4c n/a (libQt6Core.so.6 + 0x147a4c)
                #5  0x00007fa776b53e10 _ZNK4QUrl8adjustedE12QUrlTwoFlagsINS_19UrlFormattingOptionENS_25ComponentFormattingOptionEE (libQt6Core.so.6 + 0x153e10)
                #6  0x00007fa77970a01d _ZN11DolphinView23observeCreatedDirectoryERK4QUrl (libdolphinprivate.so.6 + 0x13401d)
                #7  0x00007fa776bd734f n/a (libQt6Core.so.6 + 0x1d734f)
                #8  0x00007fa7796eeb13 _ZN26DolphinNewFileMenuObserver16directoryCreatedERK4QUrl (libdolphinprivate.so.6 + 0x118b13)
                #9  0x00007fa776bd734f n/a (libQt6Core.so.6 + 0x1d734f)
                #10 0x00007fa779579573 _ZN12KNewFileMenu16directoryCreatedERK4QUrl (libKF6KIOFileWidgets.so.6 + 0xc4573)
                #11 0x00007fa7795825e4 _ZN12KNewFileMenu10slotResultEP4KJob (libKF6KIOFileWidgets.so.6 + 0xcd5e4)
                #12 0x00007fa776bd734f n/a (libQt6Core.so.6 + 0x1d734f)
                #13 0x00007fa778918793 _ZN4KJob6resultEPS_NS_14QPrivateSignalE (libKF6CoreAddons.so.6 + 0x77793)
                #14 0x00007fa77891db4c n/a (libKF6CoreAddons.so.6 + 0x7cb4c)
                #15 0x00007fa776bd734f n/a (libQt6Core.so.6 + 0x1d734f)
                #16 0x00007fa779131a07 n/a (libKF6KIOCore.so.6 + 0x11ca07)
                #17 0x00007fa7791200a5 n/a (libKF6KIOCore.so.6 + 0x10b0a5)
                #18 0x00007fa779121ce0 n/a (libKF6KIOCore.so.6 + 0x10cce0)
                #19 0x00007fa776bd734f n/a (libQt6Core.so.6 + 0x1d734f)
                #20 0x00007fa776bc4994 _ZN7QObject5eventEP6QEvent (libQt6Core.so.6 + 0x1c4994)
                #21 0x00007fa777d021c0 _ZN19QApplicationPrivate13notify_helperEP7QObjectP6QEvent (libQt6Widgets.so.6 + 0x1021c0)
                #22 0x00007fa776b6a958 _ZN16QCoreApplication15notifyInternal2EP7QObjectP6QEvent (libQt6Core.so.6 + 0x16a958)
                #23 0x00007fa776b6ad30 _ZN23QCoreApplicationPrivate16sendPostedEventsEP7QObjectiP11QThreadData (libQt6Core.so.6 + 0x16ad30)
                #24 0x00007fa776e4ae18 n/a (libQt6Core.so.6 + 0x44ae18)
                #25 0x00007fa7737acf8d n/a (libglib-2.0.so.0 + 0x5ef8d)
                #26 0x00007fa7737ae657 n/a (libglib-2.0.so.0 + 0x60657)
                #27 0x00007fa7737ae865 g_main_context_iteration (libglib-2.0.so.0 + 0x60865)
                #28 0x00007fa776e48152 _ZN20QEventDispatcherGlib13processEventsE6QFlagsIN10QEventLoop17ProcessEventsFlagEE (libQt6Core.so.6 + 0x448152)
                #29 0x00007fa776b75786 _ZN10QEventLoop4execE6QFlagsINS_17ProcessEventsFlagEE (libQt6Core.so.6 + 0x175786)
                #30 0x00007fa776b6f3f1 _ZN16QCoreApplication4execEv (libQt6Core.so.6 + 0x16f3f1)
                #31 0x0000563421c31b1e n/a (/usr/bin/dolphin + 0x4fb1e)
                #32 0x00007fa776227635 n/a (libc.so.6 + 0x27635)
                #33 0x00007fa7762276e9 __libc_start_main (libc.so.6 + 0x276e9)
                #34 0x0000563421c32a75 n/a (/usr/bin/dolphin + 0x50a75)
Comment 18 TraceyC 2026-01-05 22:57:34 UTC
*** Bug 514001 has been marked as a duplicate of this bug. ***
Comment 19 TraceyC 2026-01-05 22:57:56 UTC
*** Bug 514161 has been marked as a duplicate of this bug. ***
Comment 20 TraceyC 2026-01-05 22:58:07 UTC
*** Bug 514009 has been marked as a duplicate of this bug. ***
Comment 21 bedo 2026-01-08 08:37:49 UTC
*** Bug 514302 has been marked as a duplicate of this bug. ***
Comment 22 Méven Car 2026-01-22 09:21:30 UTC
*** Bug 514921 has been marked as a duplicate of this bug. ***