DolphinView: observeCreatedDirectory take into account last / of m_url

BUG: 513345


(cherry picked from commit 5c0d7da4aa3b2323b418bcf668981a16b61a9244)

Co-authored-by: Méven Car <meven@kde.org>